--- a/public/styles/style-main.css
+++ b/public/styles/style-main.css
@@ -17,7 +17,7 @@
 	justify-content: flex-start;
 	text-align: center;
 	height: 660px;
-	background-image: url('http://perevozki-msk.com/images/perev_furami.jpg');
+	background-image: url('http://www.pp30.ru/images/logocat/48.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -235,6 +235,12 @@
 	z-index: 3;
 }
 
+.buyer-class {
+	border-radius: 5px;
+	padding: 50px;
+	box-shadow: 5px 5px 5px rgba(0,0,0,.8);
+}
+
 .pop-wrap h2 {
 	padding: 10px 0;
 }
@@ -307,6 +313,10 @@
 	padding: 25px 50px;
 	background-color: #f0f3f7;
 	z-index: 0;
+}
+
+form .alert {
+	text-align: center;
 }
 
 .filter {
@@ -442,17 +452,46 @@
 }
 
 .list-wrap .row {
-	justify-content: space-between;
+	position: relative;
+	justify-content: center;
 	align-items: center;
 	border-bottom: 1px solid #ccc;
 	width: 100%;
+	cursor: pointer;
+	transition: height .2s linear;
+	height: 50px;
+}
+
+.list-wrap .polimers-row:hover {
+	background-color: #475359;
+	height: 75px;
 }
 
 .list-wrap .row span {
-	padding: 10px 25px 10px 75px;
+	padding: 10px 25px;
 	text-align: center;
 	color: #475359;
 	font-weight: bold;
+}
+
+.buy {
+	position: absolute;
+	top: 70%;
+	display: none;
+	border: 1px solid transparent;
+	background-color: #27ae60;
+	color: #fff;
+	border-radius: 5px;
+	padding: 10px 20px;
+	cursor: pointer;
+	transition-property: all;
+	transition-duration: .5s;
+	transition-timing-function: linear;
+}
+
+.buy:hover {
+	background-color: #2ecc71;
+	border-color: #2ecc71;
 }
 
 .profile-wrap {
